@@ -1,3 +1,8 @@
+2015-07-25 S. Thiell <sthiell@stanford.edu>
+
+	* CLI/Nodeset.py: add --list-all / -L to list groups from all group
+	sources (ticket #266). If repeated, it has the same behavior than -l.
+
 2015-07-07 S. Thiell <sthiell@stanford.edu>
 
 	* CLI/Nodeset.py: add --autostep=auto and --autostep=x% option (#161).
